--- a/public/about.html
+++ b/public/about.html
@@ -24,6 +24,7 @@
                           <ul class="right hide-on-med-and-down">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About</a></li>
+                            <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="blog.html">Blog</a></li>
                             <li><a href="contact.html">Contact</a></li>
                           </ul>
@@ -33,6 +34,7 @@
                       <ul class="sidenav" id="mobile-demo">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About</a></li>
+                            <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="blog.html">Blog</a></li>
                             <li><a href="contact.html">Contact</a></li>
                       </ul>                    
@@ -41,7 +43,7 @@
                 <div style="padding: 10%; font-size: 1.5em; background-color: rgba(255,255,255, 0.6);color: black;"class="section col s12">
 
                         I am currently a student at <strong>UPENN LPS Bootcamp</strong>. I enrolled in this program to achieve my goal in switching careers and joining the community of awesome developers and technology experts. Although I do not have extensive Computer Science background, my passion for learning gives me confidence that I will succeed in this field. <br> <b>Why web development?</b> <br>
-                        I enjoy the creative aspect of it and the challenges that evoke rigorous mental activity. As the saying goes, you either use it or lose it. For me web development synonymous to self development. It is the self development part that drives me towards success. Where am I at now? I am pursuing a position as a web developer.
+                        I enjoy the creative aspect of it and the challenges that evoke rigorous mental activity. As the saying goes, you either use it or lose it. For me web development  is synonymous to self development. It is the self development part that drives me towards success. <br> <b>Where am I at now?</b> <br> I am pursuing a position as a full stack web developer.
 
                 </div>
             </div>
