--- a/public/contact.html
+++ b/public/contact.html
@@ -6,20 +6,27 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-
+      <link type="text/css" rel="stylesheet" href="css/styles.css"  media="screen,projection"/>
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
-    <body>
+    <body
+    style="
+    background-image: url('/images/connect.png');
+    background-size: 100%;
+    background-position: fixed;
+">
+        <div class="container">
         <div>
-                <nav>
-                        <div class="nav-wrapper blue-grey">
-                          <a href="#!" class="brand-logo">Logo</a>
+                <nav class="transparent">
+                        <div class="nav-wrapper black">
+                          <a href="#!" class="brand-logo"><img class="brand-logo" src="/images/logo.png" alt=""></a>
                           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                           <ul class="right hide-on-med-and-down">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About</a></li>
+                            <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="blog.html">Blog</a></li>
                             <li><a href="contact.html">Contact</a></li>
                           </ul>
@@ -29,14 +36,54 @@
                       <ul class="sidenav" id="mobile-demo">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About</a></li>
+                            <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="blog.html">Blog</a></li>
                             <li><a href="contact.html">Contact</a></li>
                       </ul>                    
         </div>
-        <div class="container">
             <div class="row">
-                <div class="col s12">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, nam tempore quaerat perspiciatis ullam, repellendus voluptas accusamus maxime deleniti eaque nostrum iusto beatae odio et quasi libero nulla cum facilis.
+                <div style="background-color: rgba(21, 0, 255, 0.2);"  class="section col s12">
+                        <div  class="container">
+                                <section  id="contactMe">
+                                    <h2>Contact</h2>
+
+                                    <div>
+                                      <form
+                                        method="POST"
+                                        action="https://formsubmit.co/48b1771f4498e9a366139f0ba2595c3f"
+                                        id="emailForm"
+                                      >
+                                        <label style="font-size: 1.3em; color: rgb(255, 255, 255);">Name</label>
+                                        <input
+                                          placeholder="John Smith"
+                                          name="name"
+                                          type="text"
+                                          class="form-control input-text-field"
+                                          required
+                                        />
+                                        <label style="font-size: 1.3em; color: rgb(255, 255, 255); ">Email</label>
+                                        <input
+                                          placeholder="mrsmith@gmail.com"
+                                          name="email"
+                                          type="email"
+                                          class="form-control input-text-field"
+                                          required
+                                        />
+                                        <label style="font-size: 1.3em; color: rgb(255, 255, 255);">Message</label>
+                                        <textarea
+                                          placeholder="Your Message"
+                                          class="form-control"
+                                          rows="6"
+                                          name="message"
+                                          required
+                                        ></textarea>
+                                        <button type="submit" class="btn btn-dark form-control">
+                                          Send
+                                        </button>
+                                      </form>
+                                    </div>
+                                  </section>
+
                 </div>
             </div>
         </div>
