changes to portfolio page

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -53,7 +53,7 @@
                                       <p>My attempt at creating Star Wars RPG game</p>
                                     </div>
                                     <div class="card-action">
-                                      <a href="https://pav6778.github.io/unit-4-game/" target="_blank">View on Github</a>
+                                      <a href="https://pav6778.github.io/unit-4-game/" target="_blank">View in Github.oi</a>
                                     </div>
                                   </div>
                                 </div>
@@ -68,7 +68,7 @@
                                           <p>Trivia Game, one of the first bootcamp JavaScript assignments</p>
                                         </div>
                                         <div class="card-action">
-                                          <a href="https://pav6778.github.io/TriviaGame/" target="_blank">View on Github</a>
+                                          <a href="https://pav6778.github.io/TriviaGame/" target="_blank">View in Github.io</a>
                                         </div>
                                       </div>
                                     </div>
@@ -84,7 +84,7 @@
                                               <p>Song Sparrow was developed in colaboration with David F. and Phil S. (Group project)</p>
                                             </div>
                                             <div class="card-action">
-                                              <a href="https://gainstrive.github.io/song-sparrow" target="_blank">View on Github</a>
+                                              <a href="https://gainstrive.github.io/song-sparrow" target="_blank">View in Github.oi</a>
                                             </div>
                                           </div>
                                       </div>
@@ -99,7 +99,7 @@
                                                   <p>Blog Platform with passportJS localStrategy sign-in/sign-up</p>
                                                 </div>
                                                 <div class="card-action">
-                                                  <a href="https://floating-shelf-39825.herokuapp.com/" target="_blank">View on Heroku</a>
+                                                  <a href="https://floating-shelf-39825.herokuapp.com/" target="_blank">View in Heroku</a>
                                                 </div>
                                               </div>
                                           </div>
@@ -113,7 +113,7 @@
                                                       <p>My very first JavaScript Game.</p>
                                                     </div>
                                                     <div class="card-action">
-                                                      <a href="https://pav6778.github.io/Word-Guess-Game/" target="_blank">This is a link</a>
+                                                      <a href="https://pav6778.github.io/Word-Guess-Game/" target="_blank">View in Github.io</a>
                                                     </div>
                                                   </div>
 
