modified css styling and positioning of elements in contact file and porfolio. Made changes to about me page.

--- a/public/about.html
+++ b/public/about.html
@@ -19,7 +19,7 @@
         <div>
                 <nav class="transparent">
                         <div class="nav-wrapper transparent">
-                          <a href="#!" class="brand-logo"><img class="brand-logo" src="/images/logo.png" alt=""></a>
+                          <a href="/" class="brand-logo"><img class="brand-logo" src="/images/logo.png" alt=""></a>
                           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                           <ul class="right hide-on-med-and-down">
                             <li><a href="index.html">Home</a></li>
@@ -42,8 +42,8 @@
             <div class="row">
                 <div style="padding: 10%; font-size: 1.5em; background-color: rgba(255,255,255, 0.6);color: black;"class="section col s12">
 
-                        I am currently a student at <strong>UPENN LPS Bootcamp</strong>. I enrolled in this program to achieve my goal in switching careers and joining the community of awesome developers and technology experts. Although I do not have extensive Computer Science background, my passion for learning gives me confidence that I will succeed in this field. <br> <b>Why web development?</b> <br>
-                        I enjoy the creative aspect of it and the challenges that evoke rigorous mental activity. As the saying goes, you either use it or lose it. For me web development  is synonymous to self development. It is the self development part that drives me towards success. <br> <b>Where am I at now?</b> <br> I am pursuing a position as a full stack web developer.
+                        I am currently a student at <strong>Penn LPS Bootcamp</strong>. I enrolled in this program to achieve my goal in switching careers and joining the community of awesome developers and technology experts. Although I do not have extensive Computer Science background, my passion for learning gives me confidence that I will succeed in this field. <br> <b>Why web development?</b> <br>
+                        I enjoy the creative aspect of it and the challenges that evoke rigorous mental activity. For me WEB development is the means for an ongoing SELF development. <br> <b>Where am I at now?</b> <br> I am pursuing an entry position as a full stack web dev.
 
                 </div>
             </div>
