--- a/public/blog.html
+++ b/public/blog.html
@@ -19,7 +19,7 @@
         <div>
                 <nav class="transparent">
                         <div class="nav-wrapper transparent">
-                          <a href="#!" class="brand-logo"><img class="brand-logo" src="/images/logo.png" alt=""></a>
+                          <a href="/" class="brand-logo"><img class="brand-logo" src="/images/logo.png" alt=""></a>
                           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                           <ul class="right hide-on-med-and-down">
                             <li><a href="index.html">Home</a></li>
@@ -41,7 +41,7 @@
         </div>
             <div class="row">
                 <div style="background-color: rgba(255, 123, 123, 0.4); color: black;" class="section col s12">
-                    <p style="font-size: 2em;">Pavel has not yet written any articles worthy of reading. Please come back later.</p>
+                    <p style="font-size: 1.3em;">Pavel has not yet written any articles worthy of reading. Please come back later.</p>
                 </div>
             </div>
         </div>
