--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -1,131 +1,142 @@
 
 <!DOCTYPE html>
-  <html>
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-      <link type="text/css" rel="stylesheet" href="css/styles.css"  media="screen,projection"/>
+<html>
+  <head>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap"
+      rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"
+      media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="css/styles.css"
+      media="screen,projection" />
 
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
 
-    <body style="
-        background-image: url('/images/portfolio.png');
-        background-size: cover;
-        background-position:fixed;">
-            <div class="container">
-                <nav class="transparent">
-                        <div class="nav-wrapper transparent">
-                          <a href="#!" class="brand-logo"><img class="brand-logo" src="/images/logo.png" alt=""></a>
-                          <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-                          <ul class="right hide-on-med-and-down">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                          </ul>
-                        </div>
-                      </nav>
-                    
-                      <ul class="sidenav" id="mobile-demo">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                      </ul>                    
-        
-            <div class="row">
-                <div class="portfolio col s12">
-
-                                <div class="col s12 m6 l4">
-                                  <div class="card">
-                                    <div class="card-image">
-                                      <img src="images/rpggame.png">
-                                      <span class="card-title">Star Wars RPG</span>
-                                    </div>
-                                    <div class="card-content">
-                                      <p>My attempt at creating Star Wars RPG game</p>
-                                    </div>
-                                    <div class="card-action">
-                                      <a href="https://pav6778.github.io/unit-4-game/" target="_blank">View in Github.oi</a>
-                                    </div>
-                                  </div>
-                                </div>
-
-                                    <div class="col s12 m6 l4">
-                                      <div class="card">
-                                        <div class="card-image">
-                                          <img src="images/triviagame.png">
-                                          <span class="card-title">Trivia Game</span>
-                                        </div>
-                                        <div class="card-content">
-                                          <p>Trivia Game, one of the first bootcamp JavaScript assignments</p>
-                                        </div>
-                                        <div class="card-action">
-                                          <a href="https://pav6778.github.io/TriviaGame/" target="_blank">View in Github.io</a>
-                                        </div>
-                                      </div>
-                                    </div>
-
-
-                                        <div class="col s12 m6 l4">
-                                          <div class="card">
-                                            <div class="card-image">
-                                              <img src="images/songsparrow.png">
-                                              <span class="card-title">Song Sparrow</span>
-                                            </div>
-                                            <div class="card-content">
-                                              <p>Song Sparrow was developed in colaboration with David F. and Phil S. (Group project)</p>
-                                            </div>
-                                            <div class="card-action">
-                                              <a href="https://gainstrive.github.io/song-sparrow" target="_blank">View in Github.oi</a>
-                                            </div>
-                                          </div>
-                                      </div>
-
-                                            <div class="col s12 m6 l4">
-                                              <div class="card">
-                                                <div class="card-image">
-                                                  <img src="images/informant.png">
-                                                  <span class="card-title">Informant</span>
-                                                </div>
-                                                <div class="card-content">
-                                                  <p>Blog Platform with passportJS localStrategy sign-in/sign-up</p>
-                                                </div>
-                                                <div class="card-action">
-                                                  <a href="https://floating-shelf-39825.herokuapp.com/" target="_blank">View in Heroku</a>
-                                                </div>
-                                              </div>
-                                          </div>
-                                                <div class="col s12 m6 l4">
-                                                  <div class="card">
-                                                    <div class="card-image">
-                                                      <img src="images/hangman.png">
-                                                      <span class="card-title">Hangman</span>
-                                                    </div>
-                                                    <div class="card-content">
-                                                      <p>My very first JavaScript Game.</p>
-                                                    </div>
-                                                    <div class="card-action">
-                                                      <a href="https://pav6778.github.io/Word-Guess-Game/" target="_blank">View in Github.io</a>
-                                                    </div>
-                                                  </div>
-
-                                              </div>
-                </div>
+  <body style="background-image: url('/images/portfolio.png');
+    background-size: cover;
+    background-position:fixed;">
+    <div class="container">
+      <nav class="transparent">
+        <div class="nav-wrapper transparent">
+          <a href="/" class="brand-logo"><img class="brand-logo"
+              src="/images/logo.png" alt=""></a>
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i
+              class="material-icons">menu</i></a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
         </div>
+      </nav>
+
+      <ul class="sidenav" id="mobile-demo">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+
+      <div class="row">
+        <div class="portfolio col s12">
+
+          <div class="col s12 m6 l4">
+            <div class="card">
+              <div class="card-image">
+                <img src="images/rpggame.png">
+                <span class="card-title">Star Wars RPG</span>
+              </div>
+              <div class="card-content">
+                <p>My attempt at creating Star Wars RPG game</p>
+              </div>
+              <div class="card-action">
+                <a href="https://pav6778.github.io/unit-4-game/"
+                  target="_blank">View in Github.oi</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col s12 m6 l4">
+            <div class="card">
+              <div class="card-image">
+                <img src="images/triviagame.png">
+                <span class="card-title">Trivia Game</span>
+              </div>
+              <div class="card-content">
+                <p>Trivia Game, one of the first bootcamp JavaScript assignments</p>
+              </div>
+              <div class="card-action">
+                <a href="https://pav6778.github.io/TriviaGame/" target="_blank">View
+                  in Github.io</a>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col s12 m6 l4">
+            <div class="card">
+              <div class="card-image">
+                <img src="images/songsparrow.png">
+                <span class="card-title">Song Sparrow</span>
+              </div>
+              <div class="card-content">
+                <p>Song Sparrow was developed in colaboration with David F. and
+                  Phil S. (Group project)</p>
+              </div>
+              <div class="card-action">
+                <a href="https://gainstrive.github.io/song-sparrow"
+                  target="_blank">View in Github.oi</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col s12 m6 l4">
+            <div class="card">
+              <div class="card-image">
+                <img src="images/informant.png">
+                <span class="card-title">Informant</span>
+              </div>
+              <div class="card-content">
+                <p>Blog Platform with passportJS localStrategy sign-in/sign-up</p>
+              </div>
+              <div class="card-action">
+                <a href="https://floating-shelf-39825.herokuapp.com/"
+                  target="_blank">View in Heroku</a>
+              </div>
+            </div>
+          </div>
+          <div class="col s12 m6 l4">
+            <div class="card">
+              <div class="card-image">
+                <img src="images/hangman.png">
+                <span class="card-title">Hangman</span>
+              </div>
+              <div class="card-content">
+                <p>My very first JavaScript Game.</p>
+              </div>
+              <div class="card-action">
+                <a href="https://pav6778.github.io/Word-Guess-Game/"
+                  target="_blank">View in Github.io</a>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
 
       <!--JavaScript at end of body for optimized loading-->
       <script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
+        src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
       <script src="js/index.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
     </body>
