updated about me page, changed styling in contact page and added google script for form submition.

--- a/public/about.html
+++ b/public/about.html
@@ -25,7 +25,7 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About</a></li>
                             <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="blog.html">Blog</a></li>
+                            
                             <li><a href="contact.html">Contact</a></li>
                           </ul>
                         </div>
@@ -35,15 +35,20 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About</a></li>
                             <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="blog.html">Blog</a></li>
+                            
                             <li><a href="contact.html">Contact</a></li>
                       </ul>                    
         </div>
             <div class="row">
                 <div style="padding: 10%; font-size: 1.5em; background-color: rgba(255,255,255, 0.6);color: black;"class="section col s12">
 
-                        I am currently a student at <strong>Penn LPS Bootcamp</strong>. I enrolled in this program to achieve my goal in switching careers and joining the community of awesome developers and technology experts. Although I do not have extensive Computer Science background, my passion for learning gives me confidence that I will succeed in this field. <br> <b>Why web development?</b> <br>
-                        I enjoy the creative aspect of it and the challenges that evoke rigorous mental activity. For me WEB development is the means for an ongoing SELF development. <br> <b>Where am I at now?</b> <br> I am pursuing an entry position as a full stack web dev.
+<b>Hello</b><br>
+Thank you for taking your time to read about me page. <br>
+This portfolio site is an ongoing project where I display my latest work. You are welcome to navigate to porfolio page to view recent projects. Please leave your feedback, or questions in contact page. I accept constructive criticism. <br><br>
+<b>About me</b>
+<br> I am a junior developer who is currently a student at <strong>Penn LPS Bootcamp</strong>. 
+I enrolled in this program to switch careers and join the community of awesome developers and technology experts. I do not have extensive Computer Science background, however, my passion for researching and learning gives me confidence that I will succeed in this field. <br><br> <b>Why web development?</b> <br>
+I enjoy the creative aspect of it and the challenges that evoke rigorous mental activity. For me WEB development is the means for continual SELF development. <br><br> <b>Where am I at now?</b> <br> I am honing my front-end and back-end development skills using technologies such as HTML/CSS, JavaScript, NodeJS, ReactJS, MySQL, MongoDB. I am learning to use different libraries and frameworks i.e., Materialize/Bootstrap for quicker CSS styling, and ExpressJS for productivity writing node applications. While practicing my skills, I am pursuing an entry position as a full stack web dev.
 
                 </div>
             </div>
