--- a/public/contact.html
+++ b/public/contact.html
@@ -30,7 +30,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="portfolio.html">Portfolio</a></li>
-              <li><a href="blog.html">Blog</a></li>
+              
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
@@ -40,21 +40,22 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
       <div class="row">
-        <div style="background-color: rgba(21, 0, 255, 0.2);" class="section col
+        <div style="background-color: rgba(0, 0, 0, 0.2);" class="section col
           s12">
           <div class="container">
             <section id="contactMe">
-              <h2>Contact</h2>
+              <h4 style="margin-top: 150px;">Contact</h4>
 
               <div>
                 <form
+                  class="gform"
                   method="POST"
-                  action="https://formsubmit.co/48b1771f4498e9a366139f0ba2595c3f"
+                  action="https://script.google.com/macros/s/AKfycbzHSKTDOVCy8klLS-q--3XBUsuRT4KtQtBM9_c0/exec"
                   id="emailForm">
                   <label style="font-size: 1.3em; color: rgb(255, 255, 255);">Name</label>
                   <input
@@ -82,6 +83,11 @@
                   <button type="submit" class="btn btn-dark form-control">
                     Send
                   </button>
+                  <div style="display:none" class="thankyou_message">
+
+                      <h2><em>Thanks</em> for the message! I'll get back to you as soon as I can.
+                      </h2>
+                     </div>
                 </form>
               </div>
             </section>
@@ -91,6 +97,8 @@
       </div>
 
       <!--JavaScript at end of body for optimized loading-->
+
+      <script data-cfasync="false" type="text/javascript" src="js/submitFormHandler.js"></script>
       <script
         src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
