made changes to about and  portfolio page

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -31,7 +31,6 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -51,15 +50,15 @@
           <div class="col s12 m6 l4">
             <div class="card">
               <div class="card-image">
-                <img src="images/rpggame.png">
-                <span class="card-title">Star Wars RPG</span>
+                <img src="images/mindsplash.png">
+                <span class="card-title">MindSplash</span>
               </div>
               <div class="card-content">
-                <p>My attempt at creating Star Wars RPG game</p>
+                <p>Single-page React App; a graphing tool that was built on the idea of Mind Mapping Technique.</p>
               </div>
               <div class="card-action">
-                <a href="https://pav6778.github.io/unit-4-game/"
-                  target="_blank">View in Github.oi</a>
+                <a href="https://pure-castle-06277.herokuapp.com/"
+                  target="_blank">View in Heroku</a>
               </div>
             </div>
           </div>
