container size toggle control on window width

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             rel="stylesheet">
         <title>Portfolio</title>
     </head>
-    <body class="bg-light" id="home-section">
+    <body class="bg-light p-0" id="home-section">
 
-        <div class="container bg-dark">
+        <div class="container toggleContSize bg-dark">
 
             <nav class="navcolor fixed-top">
                 <div class="nav-wrapper transparent">
@@ -231,7 +231,7 @@
 
                     <div id="contactMe" class="shadow-lg bg-light contact-page">
                         <h3 class="text-center text-light bg-dark">Contact</h3>
-                        <div class="container">
+                        <div class="container p-0">
                             <section>
                                 <div>
                                     <form
