changed social media icons to higher resolution images

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
     <body class="bg-light p-0" id="home-section">
 
-        <div class="container toggleContSize bg-dark">
+        <div class="container bg-dark">
             <nav class="navcolor fixed-top">
                 <div class="nav-wrapper transparent">
                     <a href="#!" class="brand-logo">
