modified about me page and added overflow to fire up on scrollY conditions

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                             class="sidenav-trigger"><i
                                 class="material-icons">menu</i></a>
                         <ul class="right hide-on-med-and-down">
-                            <li><a href="#home-section">Home</a></li>
-                            <li><a href="#about-section">About</a></li>
-                            <li><a href="#portfolio-section">Portfolio</a></li>
-                            <li><a href="#contactMe">Contact</a></li>
+                            <li><a class="links" href="#home-section">Home</a></li>
+                            <li><a class="links" href="#about-section">About</a></li>
+                            <li><a class="links" href="#portfolio-section">Portfolio</a></li>
+                            <li><a class="links" href="#contactMe">Contact</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -42,17 +42,17 @@
                     <li><a href="#contactMe">Contact</a></li>
                 </ul>
 
-                <div class="icons bg-light">
+                <div class="icons">
                     <li class="icon">
                         <a href="https://github.com/pav6778" target="_blank"><img
                                 src="./assets/images/cat.png" alt=""><br>GitHub</a>
                     </li>
                     <li class="icon">
-                        <a href="#"><img src="./assets/images/001-linkedin.png"
+                        <a href="https://www.linkedin.com/in/pav67/"><img src="./assets/images/001-linkedin.png"
                                 alt=""><br>LinkedIn</a>
                     </li>
                     <li class="icon">
-                        <a href="#"><img src="./assets/images/003-instagram.png"
+                        <a href="https://www.instagram.com/pav_67"><img src="./assets/images/003-instagram.png"
                                 alt=""><br>Instagram</a>
                     </li>
                 </div>
@@ -61,66 +61,32 @@
                     <div class="row">
                         <div class="section col s10">
 
-                            <p class="index-text center">HELLO
-                                MY NAME IS <span style="text-decoration-line:
+                            <p class="index-text center">HELLO,<br>
+                                I am <br> <span style="text-decoration-line:
                                     underline;
                                     color:rgb(255, 123, 123); font-size:1.1em;">Pavel
                                     Panchukov</span><br>
-                                <span>&</span> <br>
-                                I am a<span style="text-decoration-line:
-                                    underline; color:rgb(123,
-                                    128, 255); font-size:1.3em;"> WEB DEVELOPER</span>
                             </p>
                         </div>
                     </div>
 
 
                 </div>
-                <div id="about-section" class="shadow-lg bg-light about-page">
+                <div class="shadow-lg bg-light about-page">
                     <h3 class="text-center text-light bg-dark">About</h3>
                     <div class="row">
-                        <div  class="section col s12">
-                            <b>Hello</b><br>
-                            Thank you for taking your time to read about me
-                            page. <br>
-                            This portfolio site is an ongoing project where I
-                            display my latest
-                            work. You are welcome to navigate to porfolio page
-                            to view recent
-                            projects. Don't forget to leave feedback, or
-                            questions in contact page. <br><br>
-                            <b>About me</b>
-                            <br> I am a junior developer and a recent graduate
-                            from <strong>University of Pennsylvania coding
-                                bootcamp</strong>.
-                            I enrolled in this program to switch careers and
-                            join the community of
-                            developers and technology experts. I do not have
-                            extensive
-                            Computer Science background, however, my passion for
-                            researching and
-                            learning gives me confidence that I will succeed in
-                            this field. <br><br>
-                            <b>Why web development?</b> <br>
-                            I enjoy the creative aspect of it and the challenges
-                            that evoke
-                            rigorous mental activity. For me WEB development is
-                            the means for
-                            continual SELF development. <br><br> <b>Where am I
-                                at now?</b> <br> I
-                            am honing my front-end and back-end development
-                            skills using
-                            technologies such as HTML/CSS, JavaScript, NodeJS,
-                            ReactJS, MySQL,
-                            MongoDB. I am learning to use different libraries
-                            and frameworks i.e.,
-                            Materialize/Bootstrap for quicker CSS styling, and
-                            ExpressJS for
-                            productivity writing node applications. While
-                            practicing my skills, I
-                            am pursuing an entry position as a full stack web
-                            dev.
+                        <div id="about-section" class="section col s12">
 
+                            <h4 class="center">Welcome! </h4>
+<hr>
+                           <p> Thank you for taking the time to read, I hope you find it interesting! This site is an ongoing project and a place where I display my latest work. If you’d like to view my projects, navigate to the portfolio section and don’t forget to leave your feedback in the contact form below. To learn more about me, continue reading.<br><br>
+                            As a computer programming enthusiast, I love everything about computer technology and wish to learn all there is to know about it, this has become my life-long journey. Although my background in computer science is limited to only 2 years of real experience coding, my general interest in computer technology dates back to years in middle school, but the desire to learn to program computers came later. 
+                            <br><br>
+
+                            I had first entertained an idea of becoming a coder back in 2008 and went as far as following HTML and CSS tutorials on YouTube but never took it seriously because, at that time, the task of learning to program seemed daunting. Ten years later, after having a conversation with a software engineer friend, my dream to learn to program was rekindled, and that day forth I made a commitment to become a web developer. 
+                            <br><br>
+                            Fast forward to 2020, I graduated from the University of Pennsylvania Full Stack Web Development program, and obtained a certificate of successful completion. This program allowed me to become skilled in various technologies such as HTML/CSS, JavaScript, ReactJS, NodeJS, ExpressJS, MySQL, MongoDB and more. With all of that experience, I am now ready to practice evolving skills in Web Development and seeking an opportunity to join a team of tech experts. 
+                        </p>
                         </div>
                     </div>
                 </div>
