style change for background and edited text

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 
                             <h4 class="center">Welcome! </h4>
 <hr>
-                           <p> Thank you for taking the time to read, I hope you find it interesting! This site is an ongoing project and a place where I display my latest work. If you’d like to view my projects, navigate to the portfolio section and don’t forget to leave your feedback in the contact form below. To learn more about me, continue reading.<br><br>
-                            As a computer programming enthusiast, I love everything about computer technology and wish to learn all there is to know about it, this has become my life-long journey. Although my background in computer science is limited to only 2 years of real experience coding, my general interest in computer technology dates back to years in middle school, but the desire to learn to program computers came later. 
+                           <p> Thank you for taking the time to read. This site is an ongoing project and a place where I display my latest work. If you’d like to view my projects, navigate to the portfolio section and don’t forget to leave your feedback in the contact form below. To learn more about me, continue reading.<br><br>
+                            Being a computer programming enthusiast, I love everything about it.  Although my background in computer science is limited to only 2 years of real experience coding, my general interest in computer technology dates back to years in middle school, but the desire to learn to program computers came later. 
                             <br><br>
 
                             I had first entertained an idea of becoming a coder back in 2008 and went as far as following HTML and CSS tutorials on YouTube but never took it seriously because, at that time, the task of learning to program seemed daunting. Ten years later, after having a conversation with a software engineer friend, my dream to learn to program was rekindled, and that day forth I made a commitment to become a web developer. 
